--- a/src/main/webapp/resources/package.json
+++ b/src/main/webapp/resources/package.json
@@ -5,9 +5,10 @@
   "author": "Franklin Tesla",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "devServer": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "dev": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
