--- a/src/main/webapp/resources/package.json
+++ b/src/main/webapp/resources/package.json
@@ -8,7 +8,7 @@
     "devServer": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "dev": "node build/build.js"
+    "dev": "node build/build.js --dev"
   },
   "dependencies": {
     "axios": "^0.18.0",
