--- a/src/main/webapp/resources/package.json
+++ b/src/main/webapp/resources/package.json
@@ -5,7 +5,7 @@
   "author": "Franklin Tesla",
   "private": true,
   "scripts": {
-    "devServer": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "devServer": "webpack-dev-server --inline --progress --config build/webpack.dev.server.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
     "dev": "node build/build.js --dev"
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.2.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
