--- a/src/main/webapp/resources/package.json
+++ b/src/main/webapp/resources/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.2.0",
     "lodash": "^4.17.5",
     "vue": "^2.5.2",
