去掉多余的babel-plugin

--- a/src/main/webapp/resources/.babelrc
+++ b/src/main/webapp/resources/.babelrc
@@ -10,9 +10,6 @@
   ],
   "plugins": [
     "transform-vue-jsx",
-    "transform-runtime",
-    "transform-es3-property-literals",
-    "transform-es3-member-expression-literals",
-    "transform-es2015-shorthand-properties"
+    "transform-runtime"
   ]
 }
